Small Calendar CSS bug fix (z-index). Added all event fields to JSON data

--- a/assets/components/eventsx/css/calendar.css
+++ b/assets/components/eventsx/css/calendar.css
@@ -29,6 +29,7 @@
     display: none;
     background: #FFF;
     position: absolute;
+    z-index: 1000;
     left: 10px;
     top: 10px;
     width: 150px;
